WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151115
B3 should be able to compile a program with Switch
https://bugs.webkit.org/show_bug.cgi?id=151115
Summary
B3 should be able to compile a program with Switch
Filip Pizlo
Reported
2015-11-10 11:21:59 PST
Thingy.
Attachments
work in progress
(11.29 KB, patch)
2015-11-11 12:59 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(18.38 KB, patch)
2015-11-11 19:00 PST
,
Filip Pizlo
benjamin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-11-11 12:59:39 PST
Created
attachment 265314
[details]
work in progress
Filip Pizlo
Comment 2
2015-11-11 19:00:12 PST
Created
attachment 265348
[details]
the patch
WebKit Commit Bot
Comment 3
2015-11-11 19:02:43 PST
Attachment 265348
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/b3/B3SwitchValue.cpp:68: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/b3/B3LowerMacros.cpp:182: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Benjamin Poulain
Comment 4
2015-11-11 19:08:09 PST
Comment on
attachment 265348
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=265348&action=review
> Source/JavaScriptCore/b3/B3BasicBlock.cpp:65 > proc.deleteValue(last());
removeLast(proc) ?
Filip Pizlo
Comment 5
2015-11-11 19:12:09 PST
(In reply to
comment #4
)
> Comment on
attachment 265348
[details]
> the patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=265348&action=review
> > > Source/JavaScriptCore/b3/B3BasicBlock.cpp:65 > > proc.deleteValue(last()); > > removeLast(proc) > ?
Then I'd have to change the next line to be append(). Is that what you are suggesting?
Benjamin Poulain
Comment 6
2015-11-11 19:26:16 PST
(In reply to
comment #5
)
> (In reply to
comment #4
) > > Comment on
attachment 265348
[details]
> > the patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=265348&action=review
> > > > > Source/JavaScriptCore/b3/B3BasicBlock.cpp:65 > > > proc.deleteValue(last()); > > > > removeLast(proc) > > ? > > Then I'd have to change the next line to be append(). Is that what you are > suggesting?
Yep. But that's just a pass-by comment. Feel free to ignore.
Filip Pizlo
Comment 7
2015-11-11 20:09:10 PST
Landed in
http://trac.webkit.org/changeset/192346
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug